# DocxAICorrector

./: .env.example  .gitignore  .kilocodemodes  .pyright_errors.txt  AGENTS.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  README.md  app.py  app.pyi  app_runtime.py  app_runtime.pyi  application_flow.py  application_flow.pyi  compare_apply.py  compare_panel.py  compare_panel.pyi  config.py  config.pyi  config.toml  config_loader_layers.py  config_loader_layers.pyi  config_model_registry.py  config_model_registry.pyi  config_runtime_sections.py  config_runtime_sections.pyi  config_structure_sections.py  config_structure_sections.pyi  constants.py  constants.pyi  corpus_registry.toml  diagnostic_snapshot.json  document.py  document.pyi  document_boundaries.py  document_boundaries.pyi  document_boundary_review.py  document_boundary_review.pyi  document_extraction.py  (+160 more)
.codex/: orchestrator-rule.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.kilo/: agent-manager.json
.specify/: feature.json  init-options.json  integration.json
.streamlit/: config.toml
.tmp_quality_debug2/: report.docx_1777819093599.json
docs/: ACTIVE_SPEC_CHECKLIST_2026-04-17.md  AI_AGENT_DEVELOPMENT_RULES.md  AI_FIRST_STRUCTURE_RECOVERY_SPEC_2026-05-08.md  AI_STRUCTURE_RECOGNITION_SPEC_2026-03-26.md  ARCHITECTURE_REFACTORING_SPEC_2026-03-25.md  ARCHIVE_INDEX.md  CHAPTER_WORKFLOW_CONTRACT_ALIGNMENT_SPEC_2026-05-07.md  CODEBASE_MAINTAINABILITY_IMPLEMENTATION_SPEC_2026-03-24.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_2026-03-11.md  CODE_REVIEW_REPORT_2026-03-12.md  COPILOT_CLI_LOOP_USAGE.md  DOCUMENT_ENTITY_ROUNDTRIP_DEVELOPMENT_PLAN_2026-03-21.md  DOCUMENT_ENTITY_ROUNDTRIP_REFACTOR_SPEC_2026-03-21.md  DOCX_FORMATTING_HARDENING_SPEC_2026-03-13.md  HANDOFF_2026-07-11.md  IMAGE_PIPELINE_REFACTOR_PLAN.md  IMAGE_PIPELINE_V2_SPEC.md  IMAGE_UI_PIPELINE_MODES.md  JOB_LEVEL_RETRY_REUSE_SPEC_2026-05-07.md  LOGGING_AND_ARTIFACT_RETENTION.md  PARAGRAPH_BOUNDARY_NORMALIZATION_SPEC_2026-03-27.md  PARAGRAPH_BOUNDARY_RECOVERY_SPEC_2026-05-02.md  REAL_DOCUMENT_VALIDATION_WORKFLOW.md  REFACTORING_STATE_AND_PREPARATION_SPEC.md  RELATION_NORMALIZATION_SPEC_2026-03-27.md  RUNNING_THE_PIPELINE.md  SPECKIT_WORKFLOW.md  STARTUP_PERFORMANCE_CONTRACT.md  TRANSLATION_MODEL_BENCHMARK_SPEC_2026-05-04.md  UNIVERSAL_REAL_DOCUMENT_VALIDATION_SPEC_2026-03-21.md  WORKFLOW_AND_IMAGE_MODES.md  codex-orchestrator-rule.md  decomposition.md  monatization2.md  monetization.md  monetization1.md  Спецификация MVP_ AI-редактор DOCX через Markdown с веб-интерфейсом.md  Спецификация follow-up - quality hardening для image pipeline.md  Спецификация v1_ сохранение и улучшение изображений в DOCX.md  (+1 more)
docxaicorrector/: __init__.py
plans/: CODE_REVIEW_REMEDIATION_SPEC_2026-03-16.md  PROMPT_SAFETY_HARDENING_SPEC_2026-03-17.md  REQUEST_CHUNK_SIZE_OPTIMIZATION_SPEC_2026-03-17.md  TEST_REFACTORING_SPEC_2026-03-15.md  TEST_WORKFLOW_CONTRACT_CLEANUP_SPEC_2026-03-14.md  WSL_FIRST_DEV_WORKFLOW_SPEC.md  monatization2.md  monetization.md  monetization1.md
prompts/: document_map_system.txt  editorial_intensity_conservative.txt  example_audiobook.txt  example_edit.txt  example_toc_translate.txt  example_translate.txt  image_prompt_registry.toml  operation_audiobook.txt  operation_edit.txt  operation_toc_translate.txt  operation_translate.txt  scene_graph_extraction.txt  structure_recognition_system.txt  system_prompt.txt
scripts/: .PSScriptAnalyzerSettings.psd1  _list_log_events.py  _run_cleanup_now.py  _shared.ps1  analyze_pyright.py  classify-formatting-residuals.py  clean-stale-run-artifacts.sh  docker-ci-parity.sh  inspect_pre_projection_drift_boundary.py  project-control-wsl.sh  restart-project.ps1  run-pdf-import-backend-comparison.sh  run-pdf-text-layer-quality-probe.sh  run-reader-cleanup-lineage-rebuild-harness.py  run-reader-cleanup-replay-experiment.sh  run-reader-cleanup-structural-matrix.py  run-real-document-quality-gate.sh  run-real-document-validation.sh  run-structural-preparation-diagnostic.sh  run-test-file.ps1  run-test-node.ps1  run-tests.ps1  run_pic1_modes.py  setup-project.ps1  setup-wsl.sh  start-project.ps1  status-project.ps1  stop-project.ps1  tail-streamlit-log.ps1  test.sh
tests/: conftest.py  test_app.py  test_app_preparation.py  test_app_recommendations.py  test_app_restartable_state.py  test_app_runtime.py  test_application_flow.py  test_block_execution_passthrough_bypass.py  test_compare_panel.py  test_config.py  test_dependency_consistency.py  test_dependency_metadata_sync.py  test_document.py  test_document_extraction.py  test_document_layout_cleanup.py  test_document_map.py  test_document_pipeline.py  test_document_pipeline_failures.py  test_document_pipeline_output_validation.py  test_generation.py  (+82 more)
(+543 files in other folders)
