[project]
name = "docxaicorrector"
version = "0.1.0"
description = "AI-powered DOCX editing and translation pipeline"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.68.0",
  "streamlit>=1.42.0",
  "python-docx>=1.1.2",
  "pypandoc>=1.15",
  "python-dotenv>=1.0.1",
  "Pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pyright>=1.1.400",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = ["test_*.py"]
filterwarnings = [
  "ignore::DeprecationWarning:docx.*",
]
markers = [
  "integration: tests that require external tools or broader system setup",
]
