[project]
name = "docxaicorrector"
version = "0.1.0"
description = "AI-powered DOCX editing and translation pipeline"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.68.0",
  "anthropic>=0.69.0",
  "streamlit>=1.42.0",
  "python-docx>=1.1.2",
  "pypandoc>=1.15",
  "python-dotenv>=1.0.1",
  "Pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pyright==1.1.409",
]
# PDF image-extraction backend (lazy-imported in pdf_import/images.py; a missing
# install raises optional_dependency_missing:pdfminer.six). pdfplumber was removed
# in spec 025 — nothing imported it.
pdf-import = [
  "pdfminer.six>=20231228",
]

[tool.setuptools.packages.find]
where = ["src"]

# Ship read-only resources (prompts + default config.toml) inside the wheel so
# `import docxaicorrector` and default-config loading work from an installed
# package with no repository checkout (spec 025 / A2).
[tool.setuptools.package-data]
docxaicorrector = [
  "resources/config.toml",
  "resources/prompts/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = ["test_*.py"]
filterwarnings = [
  "ignore::DeprecationWarning:docx.*",
]
markers = [
  "integration: tests that require external tools or broader system setup",
  "unit_contract: fast unit and contract coverage for core behavior",
  "integration_local: broader integration coverage without mandatory external API secrets",
  "compat_legacy: compatibility guards for legacy inputs, aliases, tuple shapes, or rollback behavior",
  "static_workflow: static workflow, task, script, and documentation contract checks",
  "typecheck: static typechecking gates and pyright-related checks",
  "system_deps: tests that require Pandoc, LibreOffice, antiword, or other system tools",
  "browser_ui: browser-level UI smoke coverage",
  "manual_ai_heavy: opt-in tests that require real model/API/manual operator validation",
  "real_ai_api: opt-in tests that require live text-model API access",
  "live_image_api: opt-in tests that require live image API access",
  "real_document_quality_gate: exceptional real-document quality gate coverage",
  "audiobook_sanity: opt-in audiobook-specific real-document validation coverage",
]
